--- a/Tecnocuisine/packages.config
+++ b/Tecnocuisine/packages.config
@@ -25,6 +25,9 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.WebForms" version="10.0.40219.1" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
