Impresion stock sectores

--- a/Tecnocuisine/Web.config
+++ b/Tecnocuisine/Web.config
@@ -11,15 +11,15 @@
 	<appSettings>
 		<add key="owin:AutomaticAppStartup" value="false" />
 	</appSettings>
+	<!--Produccion -->
 	<!--<connectionStrings>
-		--><!--Produccion --><!--
 		<add name="GestionEntities" connectionString="metadata=res://*/Entitys.Modelo_Gestion.csdl|res://*/Entitys.Modelo_Gestion.ssdl|res://*/Entitys.Modelo_Gestion.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=51.222.29.204;initial catalog=TS_Gestion_Tecnocuisine;Persist Security Info=True;User ID=sa;Password=P6@9vaRQjp@$nLw;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 		<add name="TS_TecnocuisineEntities" connectionString="metadata=res://*/Entitys.Modelo_Tecnocuisine.csdl|res://*/Entitys.Modelo_Tecnocuisine.ssdl|res://*/Entitys.Modelo_Tecnocuisine.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=51.222.29.204;initial catalog=TS_Tecnocuisine;persist security info=True;user id=sa;password=P6@9vaRQjp@$nLw;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>-->
-	<connectionStrings>
 		<!--Local -->
-		<add name="GestionEntities" connectionString="metadata=res://*/Entitys.Modelo_Gestion.csdl|res://*/Entitys.Modelo_Gestion.ssdl|res://*/Entitys.Modelo_Gestion.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=MATIAS-REY\SQLEXPRESS;initial catalog=TS_Tecnocuisine;Persist Security Info=false;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		<add name="TS_TecnocuisineEntities" connectionString="metadata=res://*/Entitys.Modelo_Tecnocuisine.csdl|res://*/Entitys.Modelo_Tecnocuisine.ssdl|res://*/Entitys.Modelo_Tecnocuisine.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MATIAS-REY\SQLEXPRESS;initial catalog=TS_Tecnocuisine;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<connectionStrings>
+		<add name="GestionEntities" connectionString="metadata=res://*/Entitys.Modelo_Gestion.csdl|res://*/Entitys.Modelo_Gestion.ssdl|res://*/Entitys.Modelo_Gestion.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=DESKTOP-7H744FT\SQLEXPRESS;initial catalog=TS_Tecnocuisine;Persist Security Info=false;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="TS_TecnocuisineEntities" connectionString="metadata=res://*/Entitys.Modelo_Tecnocuisine.csdl|res://*/Entitys.Modelo_Tecnocuisine.ssdl|res://*/Entitys.Modelo_Tecnocuisine.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7H744FT\SQLEXPRESS;initial catalog=TS_Tecnocuisine;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<!--<add name="GestionEntities" connectionString="metadata=res:///Entitys.Modelo_Gestion.csdl|res:///Entitys.Modelo_Gestion.ssdl|res:///Entitys.Modelo_Gestion.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-JNTUL7V\SQLEXPRESS;Initial Catalog=TS_Gestion_PaseoDelOeste;Persist Security Info=false;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	<add name="TS_Gestion_DesarrolloEntities_2" connectionString="metadata=res:///Entitys.Modelo_Gestion_2.csdl|res:///Entitys.Modelo_Gestion_2.ssdl|res:///Entitys.Modelo_Gestion_2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JNTUL7V\SQLEXPRESS;initial catalog=TS_Gestion_PaseoDelOeste;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
@@ -72,11 +72,15 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.IO.Pipelines" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-5.0.0.2" newVersion="5.0.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
